feat: 표준 검사 체커의 반환 타입 통일 및 Slack Block 으로 가독성 있게 전달하도록 구현 수정.