@@ -6,10 +6,12 @@ import org.springframework.stereotype.Component;
 import zzangmin.db_automation.client.MysqlClient;
 import zzangmin.db_automation.config.DynamicDataSourceProperties;
 import zzangmin.db_automation.dto.DatabaseConnectionInfo;
+import zzangmin.db_automation.dto.response.standardcheck.StandardCheckResultResponseDTO;
 import zzangmin.db_automation.entity.mysqlobject.MysqlAccount;
 import zzangmin.db_automation.standardvalue.AccountStandard;
 import zzangmin.db_automation.service.AwsService;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,13 +23,13 @@ public class AccountStandardChecker {
     private final MysqlClient mysqlClient;
     private final AwsService awsService;
 
-    public String checkAccountStandard() {
-        StringBuilder sb = new StringBuilder();
-        sb.append("\n");
+    public List<StandardCheckResultResponseDTO> checkAccountStandard() {
+        List<StandardCheckResultResponseDTO> results = new ArrayList<>();
+
         List<DatabaseConnectionInfo> databaseConnectionInfos = DynamicDataSourceProperties.findAllDatabases()
                 .values()
                 .stream()
-                .collect(Collectors.toList());
+                .toList();
         for (DatabaseConnectionInfo databaseConnectionInfo : databaseConnectionInfos) {
             log.info("databaseConnectionInfo: {}", databaseConnectionInfo);
             String masterUsername = awsService.findClusterMasterUserName(databaseConnectionInfo);
@@ -38,45 +40,77 @@ public class AccountStandardChecker {
                     .filter((account -> !account.getUser().equals(masterUsername)))
                     .collect(Collectors.toList());
             for (MysqlAccount mysqlAccount : mysqlAccounts) {
-                sb.append(checkPrivilege(mysqlAccount));
+                results.addAll(checkPrivilege(mysqlAccount, databaseConnectionInfo));
+
                 if (AccountStandard.isAccountHostPercentAllow()) {
-                    sb.append(checkHost(mysqlAccount));
+                    results.addAll(checkHost(mysqlAccount, databaseConnectionInfo));
                 }
             }
             if (AccountStandard.isMasterUserEnable()) {
-                sb.append(checkMasterUserExists(masterUsername, mysqlAccounts, databaseConnectionInfo));
+                results.addAll(checkMasterUserExists(masterUsername, mysqlAccounts, databaseConnectionInfo));
             }
         }
-        log.info("account standard check result: {}", sb.toString());
-        return sb.toString();
+        log.info("account standard check finish: {}", results);
+        return results;
     }
 
-    private String checkPrivilege(MysqlAccount mysqlAccount) {
-        StringBuilder sb = new StringBuilder();
+    private List<StandardCheckResultResponseDTO> checkPrivilege(MysqlAccount mysqlAccount, DatabaseConnectionInfo databaseConnectionInfo) {
+        List<StandardCheckResultResponseDTO> results = new ArrayList<>();
         List<MysqlAccount.Privilege> privileges = mysqlAccount.getPrivileges();
+
         for (MysqlAccount.Privilege privilege : privileges) {
             if (!AccountStandard.getApplicationAccountAllowedPrivileges().contains(privilege.getPermissionType())) {
-                sb.append(String.format("`%s` 계정에 허용되지 않은 `%s` TO `%s`.`%s` 권한이 존재합니다.\n", mysqlAccount.getUser(), privilege.getPermissionType(), privilege.getDatabaseName(), privilege.getObjectName()));
+                results.add(new StandardCheckResultResponseDTO(
+                        databaseConnectionInfo.getAccountId(),
+                        databaseConnectionInfo.getDatabaseName(),
+                        StandardCheckResultResponseDTO.StandardType.ACCOUNT,
+                        null,
+                        null,
+                        null,
+                        String.format("`%s` 계정에 허용되지 않은 `%s` TO `%s`.`%s` 권한이 존재합니다.",
+                                mysqlAccount.getUser(),
+                                privilege.getPermissionType(),
+                                privilege.getDatabaseName(),
+                                privilege.getObjectName())
+                ));
             }
         }
-        return sb.toString();
+        return results;
     }
 
-    private String checkHost(MysqlAccount mysqlAccount) {
-        StringBuilder sb = new StringBuilder();
-        if (mysqlAccount.getHost().equals("%") || mysqlAccount.getHost().equals("'%'")) {
-            sb.append(String.format("`%s` 계정의 host가 %로 설정되어있습니다.\n", mysqlAccount.getUser()));
+
+    private List<StandardCheckResultResponseDTO> checkHost(MysqlAccount mysqlAccount, DatabaseConnectionInfo databaseConnectionInfo) {
+        List<StandardCheckResultResponseDTO> resultList = new ArrayList<>();
+        if ("%".equals(mysqlAccount.getHost()) || "'%".equals(mysqlAccount.getHost())) {
+            resultList.add(new StandardCheckResultResponseDTO(
+                    databaseConnectionInfo.getAccountId(),
+                    databaseConnectionInfo.getDatabaseName(),
+                    StandardCheckResultResponseDTO.StandardType.ACCOUNT,
+                    null,
+                    null,
+                    null,
+                    String.format("`%s` 계정의 host가 %%로 설정되어 있습니다.", mysqlAccount.getUser())
+            ));
         }
-        return sb.toString();
+        return resultList;
     }
 
-    private String checkMasterUserExists(String masterUsername, List<MysqlAccount> mysqlAccounts, DatabaseConnectionInfo databaseConnectionInfo) {
-        StringBuilder sb = new StringBuilder();
 
-        if (mysqlAccounts.stream().map(account -> account.getUser()).collect(Collectors.toList()).contains(masterUsername)) {
-            sb.append("masterUser 가 활성화되어있습니다. masterUsername: " + masterUsername + "\n");
+    private List<StandardCheckResultResponseDTO> checkMasterUserExists(String masterUsername, List<MysqlAccount> mysqlAccounts, DatabaseConnectionInfo databaseConnectionInfo) {
+        List<StandardCheckResultResponseDTO> resultList = new ArrayList<>();
+        List<String> users = mysqlAccounts.stream().map(MysqlAccount::getUser).toList();
+
+        if (users.contains(masterUsername)) {
+            resultList.add(new StandardCheckResultResponseDTO(
+                    databaseConnectionInfo.getAccountId(),
+                    databaseConnectionInfo.getDatabaseName(),
+                    StandardCheckResultResponseDTO.StandardType.ACCOUNT,
+                    null,
+                    null,
+                    null,
+                    "masterUser 가 활성화되어있습니다. masterUsername: " + masterUsername
+            ));
         }
-        return sb.toString();
-
+        return resultList;
     }
 }
