@@ -6,11 +6,12 @@ import org.springframework.stereotype.Component;
 import zzangmin.db_automation.client.MysqlClient;
 import zzangmin.db_automation.config.DynamicDataSourceProperties;
 import zzangmin.db_automation.dto.DatabaseConnectionInfo;
+import zzangmin.db_automation.dto.response.standardcheck.StandardCheckResultResponseDTO;
 import zzangmin.db_automation.standardvalue.PluginComponentStandard;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -19,24 +20,26 @@ public class PluginComponentStandardChecker {
 
     private final MysqlClient mysqlClient;
 
-    public String checkPluginComponentStandard() {
-        StringBuilder sb = new StringBuilder();
-        sb.append("\n");
+    public List<StandardCheckResultResponseDTO>  checkPluginComponentStandard() {
+        List<StandardCheckResultResponseDTO> results = new ArrayList<>();
 
         List<DatabaseConnectionInfo> databaseConnectionInfos = DynamicDataSourceProperties.findAllDatabases()
                 .values()
                 .stream()
-                .collect(Collectors.toList());
+                .toList();
         List<String> essentialPluginComponentNames = PluginComponentStandard.essentialPluginComponentNames;
-        List<String> standardVariableNames = PluginComponentStandard.pluginComponentStandardValues.keySet()
-                .stream()
-                .collect(Collectors.toList());
+        List<String> standardVariableNames = PluginComponentStandard.getKeySet().stream().toList();
 
         for (DatabaseConnectionInfo databaseConnectionInfo : databaseConnectionInfos) {
             List<String> pluginComponentNames = mysqlClient.findInstalledPluginsAndComponentNames(databaseConnectionInfo);
             for (String essentialPluginComponentName : essentialPluginComponentNames) {
                 if (!pluginComponentNames.contains(essentialPluginComponentName)) {
-                    sb.append(String.format("Cluster Name: %s 오류: [%s 플러그인(컴포넌트) 가 설치되어있지 않습니다.]\n", databaseConnectionInfo.getDatabaseName(), essentialPluginComponentName));
+                    results.add(new StandardCheckResultResponseDTO(databaseConnectionInfo.getAccountId(),
+                            databaseConnectionInfo.getDatabaseName(),
+                            StandardCheckResultResponseDTO.StandardType.PLUGIN_COMPONENT,
+                            essentialPluginComponentName,
+                            null, null, "플러그인(컴포넌트)이 설치/활성화되지 않았습니다."));
+
                 }
             }
 
@@ -46,18 +49,24 @@ public class PluginComponentStandardChecker {
                 try {
                     findValue = variables.get(standardVariableName);
                 } catch (Exception e) {
-                    sb.append(String.format("Cluster Name: %s 오류: [%s 변수가 존재하지 않습니다.]\n", databaseConnectionInfo.getDatabaseName(), standardVariableName));
+                    results.add(new StandardCheckResultResponseDTO(databaseConnectionInfo.getAccountId(),
+                            databaseConnectionInfo.getDatabaseName(),
+                            StandardCheckResultResponseDTO.StandardType.PLUGIN_COMPONENT,
+                            standardVariableName,
+                            PluginComponentStandard.findStandardValue(standardVariableName), null, "플러그인(컴포넌트)의 설정값이 존재하지 않습니다."));
                 }
-                String standardValue = PluginComponentStandard.pluginComponentStandardValues.get(standardVariableName);
-                if (findValue != null && findValue != standardValue) {
-                    sb.append(String.format("Cluster Name: %s 오류: [%s 변수 값이 표준과 다릅니다.] 표준값: %s, 설정값: %s\n", databaseConnectionInfo.getDatabaseName(), standardVariableName, standardValue, findValue));
+                String standardValue = PluginComponentStandard.findStandardValue(standardVariableName);
+                if (findValue != null && !findValue.equals(standardValue)) {
+                    results.add(new StandardCheckResultResponseDTO(databaseConnectionInfo.getAccountId(),
+                            databaseConnectionInfo.getDatabaseName(),
+                            StandardCheckResultResponseDTO.StandardType.PLUGIN_COMPONENT,
+                            standardVariableName,
+                            PluginComponentStandard.findStandardValue(standardVariableName), findValue, "플러그인(컴포넌트)의 설정값이 다릅니다."));
+
                 }
             }
-
         }
-        sb.append("\n");
-
-        return sb.toString();
+        return results;
     }
 
 }
