@@ -6,12 +6,13 @@ import org.springframework.stereotype.Component;
 import zzangmin.db_automation.client.MysqlClient;
 import zzangmin.db_automation.config.DynamicDataSourceProperties;
 import zzangmin.db_automation.convention.TableConvention;
+import zzangmin.db_automation.dto.response.standardcheck.StandardCheckResultResponseDTO;
 import zzangmin.db_automation.entity.mysqlobject.Table;
 import zzangmin.db_automation.dto.DatabaseConnectionInfo;
 import zzangmin.db_automation.service.DescribeService;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -20,18 +21,16 @@ public class SchemaStandardChecker {
 
     private final MysqlClient mysqlClient;
 
+    public List<StandardCheckResultResponseDTO> checkSchemaStandard() {
+        List<StandardCheckResultResponseDTO> results = new ArrayList<>();
 
-    // 스키마, 계정 권한 등
-    public String checkSchemaStandard() {
-        StringBuilder sb = new StringBuilder();
-        sb.append("\n");
-        List<DatabaseConnectionInfo> databaseConnectionInfos = DynamicDataSourceProperties.findAllDatabases().values().stream().collect(Collectors.toList());
+        List<DatabaseConnectionInfo> databaseConnectionInfos = DynamicDataSourceProperties.findAllDatabases().values().stream().toList();
 
         for (DatabaseConnectionInfo databaseConnectionInfo : databaseConnectionInfos) {
             List<String> schemaNames = mysqlClient.findSchemaNames(databaseConnectionInfo)
                     .stream()
                     .filter(schemaName -> !DescribeService.schemaBlackList.contains(schemaName))
-                    .collect(Collectors.toList());
+                    .toList();
             for (String schemaName : schemaNames) {
                 List<String> tableNames = mysqlClient.findTableNames(databaseConnectionInfo, schemaName);
                 List<Table> tables = mysqlClient.findTables(databaseConnectionInfo, schemaName, tableNames);
@@ -39,13 +38,14 @@ public class SchemaStandardChecker {
                     try {
                         TableConvention.validateTableConvention(table);
                     } catch (Exception e) {
-                        sb.append(String.format("Cluster Name: %s, 스키마명: %s, 테이블명: %s 오류: [", databaseConnectionInfo.getDatabaseName(), schemaName, table.getTableName()));
-                        sb.append(e.getMessage());
-                        sb.append("]\n");
+                        results.add(new StandardCheckResultResponseDTO(databaseConnectionInfo.getAccountId(),
+                                databaseConnectionInfo.getDatabaseName(),
+                                StandardCheckResultResponseDTO.StandardType.SCHEMA,
+                                null, null, null, e.getMessage()));
                     }
                 }
             }
         }
-        return sb.toString();
+        return results;
     }
 }
