@@ -5,12 +5,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import software.amazon.awssdk.services.rds.model.DBCluster;
 import software.amazon.awssdk.services.rds.model.DBInstance;
+import software.amazon.awssdk.services.rds.model.Tag;
+import zzangmin.db_automation.dto.response.standardcheck.StandardCheckResultResponseDTO;
 import zzangmin.db_automation.standardvalue.TagStandard;
 import zzangmin.db_automation.service.AwsService;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -20,8 +22,9 @@ public class TagStandardChecker {
 
     private final AwsService awsService;
 
-    public String checkTagStandard() {
-        StringBuilder tagStandardResult = new StringBuilder();
+    public List<StandardCheckResultResponseDTO> checkTagStandard() {
+        List<StandardCheckResultResponseDTO> results = new ArrayList<>();
+
         List<String> standardTagKeyNames = TagStandard.standardTagKeyNames;
         Map<String, List<DBCluster>> dbClusters = awsService.findAllClusterInfo();
         for (String accountId : dbClusters.keySet()) {
@@ -29,11 +32,11 @@ public class TagStandardChecker {
             for (DBCluster cluster : accountDbClusters) {
                 List<String> clusterTagKeys = cluster.tagList()
                         .stream()
-                        .map(tag -> tag.key())
-                        .collect(Collectors.toList());
+                        .map(Tag::key)
+                        .toList();
                 for (String tagName : standardTagKeyNames) {
                     if (!clusterTagKeys.contains(tagName)) {
-                        tagStandardResult.append(String.format("accountId: %s, %s 클러스터에 %s 태그가 존재하지 않습니다.\n", accountId, cluster.dbClusterIdentifier(), tagName));
+                        results.add(new StandardCheckResultResponseDTO(accountId, cluster.dbClusterIdentifier(), StandardCheckResultResponseDTO.StandardType.TAG, tagName, "태그생성필요", null, "표준 태그가 존재하지 않습니다."));
                     }
                 }
             }
@@ -45,17 +48,16 @@ public class TagStandardChecker {
             for (DBInstance dbInstance : accountDbInstances) {
                 List<String> instanceTagKeys = dbInstance.tagList()
                         .stream()
-                        .map(tag -> tag.key())
-                        .collect(Collectors.toList());
+                        .map(Tag::key)
+                        .toList();
                 for (String tagName : standardTagKeyNames) {
                     if (!instanceTagKeys.contains(tagName)) {
-                        tagStandardResult.append(String.format("accountId: %s, %s 인스턴스에 %s 태그가 존재하지 않습니다.\n", accountId, dbInstance.dbInstanceIdentifier(), tagName));
+                        results.add(new StandardCheckResultResponseDTO(accountId, dbInstance.dbInstanceIdentifier(), StandardCheckResultResponseDTO.StandardType.TAG, tagName, "태그생성필요", null, "표준 태그가 존재하지 않습니다."));
                     }
                 }
             }
         }
-
-        return tagStandardResult.toString();
+        return results;
     }
 
 }
